unpackaged/main/default/objects/loan__Batch_Process_Log__c/loan__Batch_Process_Log__c.object-meta.xml
<CustomObject>
    <label>Batch Process Log</label>
    <nameField>
        <label>Apex Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Process Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>