unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/App_Ids__c.field-meta.xml
<CustomField>
    <fullName>App_Ids__c</fullName>
    <label>App Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>