unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>