unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Branch__c.field-meta.xml
<CustomField>
    <fullName>loan__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>loan__Office_Name__c</referenceTo>
    <relationshipLabel>Batch Process Log</relationshipLabel>
    <relationshipName>Batch_Process_Log</relationshipName>
    <type>Lookup</type>
</CustomField>