unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>