unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>loan__Log_Level__c</fullName>
    <description>An indicator of level of logging</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
                <default>true</default>
                <label>ERROR</label>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>