unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Message__c.field-meta.xml
<CustomField>
    <fullName>loan__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>