unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Origin__c.field-meta.xml
<CustomField>
    <fullName>loan__Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start Of Day Process</fullName>
            </value>
            <value>
                <fullName>End of Day Process</fullName>
            </value>
            <value>
                <fullName>Month End Process</fullName>
            </value>
            <value>
                <fullName>Year End Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>