unpackaged/main/default/objects/loan__Batch_Process_Log__c/fields/loan__Time__c.field-meta.xml
<CustomField>
    <fullName>loan__Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>