unpackaged/main/default/objects/loan__Batch_Process_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>loan__Message__c</columns>
    <columns>loan__Origin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>loan__Origin__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>