unpackaged/main/default/objects/loan__Batch_Process_Log__c/listViews/CRM_658.listView-meta.xml
<ListView>
    <fullName>CRM_658</fullName>
    <columns>loan__Summary_Record_Id__c</columns>
    <columns>loan__Type__c</columns>
    <columns>loan__Log_Level__c</columns>
    <columns>loan__Batch_Id__c</columns>
    <columns>loan__Batch_Job_Id__c</columns>
    <columns>loan__Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>loan__Origin__c</field>
        <operation>contains</operation>
        <value>MW_POSTDEALROOMSTRUCTURE</value>
    </filters>
    <label>CRM 658 MW_POSTDEALROOMSTRUCTURE</label>
</ListView>