unpackaged/main/default/objects/loan__Batch_Process_Log__c/listViews/Francisco.listView-meta.xml
<ListView>
    <fullName>Francisco</fullName>
    <columns>NAME</columns>
    <columns>loan__Message__c</columns>
    <columns>loan__Origin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>loan__Origin__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Francisco</value>
    </filters>
    <label>Francisco</label>
</ListView>