unpackaged/main/default/objects/loan__Batch_Process_Log__c/listViews/Francisco_jobs.listView-meta.xml
<ListView>
    <fullName>Francisco_jobs</fullName>
    <columns>NAME</columns>
    <columns>loan__Date__c</columns>
    <columns>loan__Time__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Francisco</value>
    </filters>
    <label>Francisco_jobs</label>
</ListView>