unpackaged/main/default/objects/loan__Batch_Process_Log__c/listViews/LOS147.listView-meta.xml
<ListView>
    <fullName>LOS147</fullName>
    <columns>NAME</columns>
    <columns>loan__Origin__c</columns>
    <columns>loan__Type__c</columns>
    <columns>loan__Log_Level__c</columns>
    <columns>loan__Message__c</columns>
    <columns>loan__Summary_Record_Id__c</columns>
    <columns>loan__Batch_Job_Id__c</columns>
    <columns>loan__Batch_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>loan__Summary_Record_Id__c</field>
        <operation>contains</operation>
        <value>a6h2M0000008FSd</value>
    </filters>
    <label>LOS147</label>
</ListView>